# app/backend/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /v2
 definitions:
   dto.CreateUserDto:
     properties:
@@ -15,6 +14,18 @@ definitions:
     required:
     - email
     - name
+    - password
+    type: object
+  dto.LoginDTO:
+    properties:
+      email:
+        type: string
+      password:
+        maxLength: 40
+        minLength: 8
+        type: string
+    required:
+    - email
     - password
     type: object
   dto.UpdateUserDto:
@@ -68,6 +79,11 @@ definitions:
           $ref: '#/definitions/response.UserResponse'
         type: array
     type: object
+  response.UserAuthToken:
+    properties:
+      access_token:
+        type: string
+    type: object
   response.UserResponse:
     properties:
       created_at:
@@ -81,47 +97,42 @@ definitions:
       updated_at:
         type: string
     type: object
-host: petstore.swagger.io
 info:
   contact:
-    email: support@swagger.io
+    email: your@mail.com
     name: API Support
-    url: http://www.swagger.io/support
+  description: This is an auto-generated API Docs.
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  title: Time Table Allocation API
+  termsOfService: http://swagger.io/terms/
+  title: Time Table API
   version: "1.0"
 paths:
-  /user:
-    get:
+  /auth/login:
+    post:
       consumes:
       - application/json
-      description: Get many users
+      description: Auth Login
+      operationId: auth-login
+      parameters:
+      - description: Auth Login Input
+        in: body
+        name: Login
+        required: true
+        schema:
+          $ref: '#/definitions/dto.LoginDTO'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/response.ManyUsersResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httperr.RestErr'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/httperr.RestErr'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httperr.RestErr'
-      security:
-      - ApiKeyAuth: []
-      summary: Get many users
+            $ref: '#/definitions/response.UserAuthToken'
+      summary: Auth Login
       tags:
-      - user
+      - auth
+  /user:
     patch:
       consumes:
       - application/json
@@ -152,6 +163,33 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Update user
+      tags:
+      - user
+    post:
+      consumes:
+      - application/json
+      description: Endpoint for create user
+      parameters:
+      - description: Create user dto
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateUserDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httperr.RestErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httperr.RestErr'
+      summary: Create new user
       tags:
       - user
   /user/{id}:
@@ -221,8 +259,8 @@ paths:
       summary: User details
       tags:
       - user
-  /user/password/{id}:
-    get:
+  /user/{id}/password:
+    patch:
       consumes:
       - application/json
       description: Endpoint for Update user password
@@ -256,4 +294,38 @@ paths:
       summary: Update user password
       tags:
       - user
+  /user/list-all:
+    get:
+      consumes:
+      - application/json
+      description: Get many users
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ManyUsersResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httperr.RestErr'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httperr.RestErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httperr.RestErr'
+      security:
+      - ApiKeyAuth: []
+      summary: Get many users
+      tags:
+      - user
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
