# app/backend/internal/dto/user_dto.go
@@ -15,3 +15,8 @@ type UpdateUserPasswordDto struct {
 	Password    string `json:"password" validate:"required,min=8,max=30,containsany=!@#$%*"`
 	OldPassword string `json:"old_password" validate:"required,min=8,max=30,containsany=!@#$%*"`
 }
+
+type LoginDTO struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=8,max=40"`
+}
