# app/backend/internal/handler/response/user_response.go
@@ -13,3 +13,7 @@ type UserResponse struct {
 type ManyUsersResponse struct {
 	Users []UserResponse `json:"users"`
 }
+
+type UserAuthToken struct {
+	AccessToken string `json:"access_token"`
+}
