# app/backend/internal/handler/userhandler/user_handler.go
@@ -5,6 +5,7 @@ import (
 	"fmt"
 	"github.com/go-chi/chi"
 	"github.com/google/uuid"
+	"github.com/robinsonvs/time-table-project/internal/common/utils"
 	"github.com/robinsonvs/time-table-project/internal/dto"
 	"github.com/robinsonvs/time-table-project/internal/handler/httperr"
 	"github.com/robinsonvs/time-table-project/internal/handler/validation"
@@ -14,16 +15,16 @@ import (
 
 // Create user
 //
-//	@Summary        Create new user
-//	@Description    Endpoint for create user
-//	@Tags           user
-//	@Accept         json
-//	@Produce        json
-//	@Param          body    body        dto.CreateUserDto   true    "Create user dto"   true
-//	@Success        200
-//	@Failure        400 {object}    httperr.RestErr
-//	@Failure        500 {object}    httperr.RestErr
-//	@Router         /user [get]
+//	@Summary		Create new user
+//	@Description	Endpoint for create user
+//	@Tags			user
+//	@Accept			json
+//	@Produce		json
+//	@Param			body	body	dto.CreateUserDto	true	"Create user dto"	true
+//	@Success		200
+//	@Failure		400	{object}	httperr.RestErr
+//	@Failure		500	{object}	httperr.RestErr
+//	@Router			/user [post]
 func (h *handler) CreateUser(w http.ResponseWriter, r *http.Request) {
 	var req dto.CreateUserDto
 
@@ -64,98 +65,101 @@ func (h *handler) CreateUser(w http.ResponseWriter, r *http.Request) {
 
 // Update user
 //
-//	@Summary        Update user
-//	@Description    Endpoint for update user
-//	@Tags           user
-//	@Security       ApiKeyAuth
-//	@Accept         json
-//	@Produce        json
-//	@Param          body    body    dto.UpdateUserDto   false   "Update user dto"   true
-//	@Success        200
-//	@Failure        400 {object}    httperr.RestErr
-//	@Failure        404 {object}    httperr.RestErr
-//	@Failure        500 {object}    httperr.RestErr
-//	@Router         /user [patch]
+//	@Summary		Update user
+//	@Description	Endpoint for update user
+//	@Tags			user
+//	@Security		ApiKeyAuth
+//	@Accept			json
+//	@Produce		json
+//	@Param			body	body	dto.UpdateUserDto	false	"Update user dto"	true
+//	@Success		200
+//	@Failure		400	{object}	httperr.RestErr
+//	@Failure		404	{object}	httperr.RestErr
+//	@Failure		500	{object}	httperr.RestErr
+//	@Router			/user [patch]
 func (h *handler) UpdateUser(w http.ResponseWriter, r *http.Request) {
 	var req dto.UpdateUserDto
 
-	id := chi.URLParam(r, "id")
-	if id == "" {
-		slog.Error("is is empty", slog.String("package", "userHandler"))
-		w.WriteHeader(http.StatusBadRequest)
-		msg := httperr.NewBadRequestError("id is required")
-		json.NewEncoder(w).Encode(msg)
-		return
-	}
-
-	_, err := uuid.Parse(id)
+	user, err := utils.DecodeJwt(r)
 	if err != nil {
-		slog.Error(fmt.Sprintf("error to parse id: %v", err), slog.String("package", "handler_user"))
+		slog.Error("error to decode jwt", slog.String("package", "userhandler"))
 		w.WriteHeader(http.StatusBadRequest)
-		msg := httperr.NewBadRequestError("error to parse id")
+		msg := httperr.NewBadRequestError("error to decode jwt")
 		json.NewEncoder(w).Encode(msg)
 		return
 	}
-
 	if r.Body == http.NoBody {
-		slog.Error("body is empty", slog.String("package", "userHandle"))
+		slog.Error("body is empty", slog.String("package", "userhandler"))
 		w.WriteHeader(http.StatusBadRequest)
 		msg := httperr.NewBadRequestError("body is required")
 		json.NewEncoder(w).Encode(msg)
 		return
 	}
-
 	err = json.NewDecoder(r.Body).Decode(&req)
 	if err != nil {
-		slog.Error("error to decode body", "err", err, slog.String("package", "handler_user"))
+		slog.Error("error to decode body", "err", err, slog.String("package", "userhandler"))
 		w.WriteHeader(http.StatusBadRequest)
 		msg := httperr.NewBadRequestError("error to decode body")
 		json.NewEncoder(w).Encode(msg)
 		return
 	}
-
 	httpErr := validation.ValidateHttpData(req)
 	if httpErr != nil {
-		slog.Error(fmt.Sprintf("error to validate data: %v", httpErr), slog.String("package", "handler_user"))
+		slog.Error(fmt.Sprintf("error to validate data: %v", httpErr), slog.String("package", "userhandler"))
 		w.WriteHeader(httpErr.Code)
 		json.NewEncoder(w).Encode(httpErr)
 		return
 	}
-
-	err = h.service.UpdateUser(r.Context(), req, id)
+	err = h.service.UpdateUser(r.Context(), req, user.ID)
 	if err != nil {
-		slog.Error(fmt.Sprintf("error to update user: %v", err), slog.String("package", "handler_user"))
-		w.WriteHeader(http.StatusInternalServerError)
-		msg := httperr.NewBadRequestError("error to update user")
-		json.NewEncoder(w).Encode(msg)
+		slog.Error(fmt.Sprintf("error to update user: %v", err), slog.String("package", "userhandler"))
+		if err.Error() == "user not found" {
+			w.WriteHeader(http.StatusNotFound)
+			msg := httperr.NewNotFoundError("user not found")
+			json.NewEncoder(w).Encode(msg)
+			return
+		}
+		if err.Error() == "cep not found" {
+			w.WriteHeader(http.StatusNotFound)
+			msg := httperr.NewNotFoundError("cep not found")
+			json.NewEncoder(w).Encode(msg)
+			return
+		}
+		if err.Error() == "user already exists" {
+			w.WriteHeader(http.StatusBadRequest)
+			msg := httperr.NewBadRequestError("user already exists with this email")
+			json.NewEncoder(w).Encode(msg)
+			return
+		}
+		w.WriteHeader(http.StatusBadRequest)
+		json.NewEncoder(w).Encode(err)
 		return
 	}
 }
 
 // User details
 //
-//	@Summary        User details
-//	@Description    Get user by id
-//	@Tags           user
-//	@Security       ApiKeyAuth
-//	@Accept         json
-//	@Produce        json
-//	@Param          id  path    string  true    "user id"
-//	@Success        200 {object} response.UserResponse
-//	@Failure        400 {object}    httperr.RestErr
-//	@Failure        404 {object}    httperr.RestErr
-//	@Failure        500 {object}    httperr.RestErr
-//	@Router         /user/{id} [get]
+//	@Summary		User details
+//	@Description	Get user by id
+//	@Tags			user
+//	@Security		ApiKeyAuth
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path	string	true	"user id"
+//	@Success		200	{object}	response.UserResponse
+//	@Failure		400	{object}	httperr.RestErr
+//	@Failure		404	{object}	httperr.RestErr
+//	@Failure		500	{object}	httperr.RestErr
+//	@Router			/user/{id} [get]
 func (h *handler) GetUserByID(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
-		slog.Error("id is empty", slog.String("package", "userHandler"))
+		slog.Error("id is empty", slog.String("package", "userhandler"))
 		w.WriteHeader(http.StatusBadRequest)
 		msg := httperr.NewBadRequestError("id is required")
 		json.NewEncoder(w).Encode(msg)
 		return
 	}
-
 	_, err := uuid.Parse(id)
 	if err != nil {
 		slog.Error(fmt.Sprintf("error to parse id: %v", err), slog.String("package", "handler_user"))
@@ -167,13 +171,18 @@ func (h *handler) GetUserByID(w http.ResponseWriter, r *http.Request) {
 
 	res, err := h.service.GetUserByID(r.Context(), id)
 	if err != nil {
-		slog.Error(fmt.Sprintf("error to get user: %v", err), slog.String("package", "handler_user"))
+		slog.Error(fmt.Sprintf("error to get user: %v", err), slog.String("package", "userhandler"))
+		if err.Error() == "user not found" {
+			w.WriteHeader(http.StatusNotFound)
+			msg := httperr.NewNotFoundError("user not found")
+			json.NewEncoder(w).Encode(msg)
+			return
+		}
 		w.WriteHeader(http.StatusInternalServerError)
 		msg := httperr.NewBadRequestError("error to get user")
 		json.NewEncoder(w).Encode(msg)
 		return
 	}
-
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(res)
@@ -181,18 +190,18 @@ func (h *handler) GetUserByID(w http.ResponseWriter, r *http.Request) {
 
 // Delete user
 //
-//	@Summary        Delete user
-//	@Description    delete user by id
-//	@Tags           user
-//	@Security       ApiKeyAuth
-//	@Accept         json
-//	@Produce        json
-//	@Param          id  path    string  true    "user id"
-//	@Success        200
-//	@Failure        400 {object}    httperr.RestErr
-//	@Failure        404 {object}    httperr.RestErr
-//	@Failure        500 {object}    httperr.RestErr
-//	@Router         /user/{id} [delete]
+//	@Summary		Delete user
+//	@Description	delete user by id
+//	@Tags			user
+//	@Security		ApiKeyAuth
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path	string	true	"user id"
+//	@Success		200
+//	@Failure		400	{object}	httperr.RestErr
+//	@Failure		404	{object}	httperr.RestErr
+//	@Failure		500	{object}	httperr.RestErr
+//	@Router			/user/{id} [delete]
 func (h *handler) DeleteUser(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -213,6 +222,12 @@ func (h *handler) DeleteUser(w http.ResponseWriter, r *http.Request) {
 	err = h.service.DeleteUser(r.Context(), id)
 	if err != nil {
 		slog.Error(fmt.Sprintf("error to delete user: %v", err), slog.String("package", "handler_user"))
+		if err.Error() == "user not found" {
+			w.WriteHeader(http.StatusNotFound)
+			msg := httperr.NewNotFoundError("user not found")
+			json.NewEncoder(w).Encode(msg)
+			return
+		}
 		w.WriteHeader(http.StatusInternalServerError)
 		msg := httperr.NewBadRequestError("error to delete user")
 		json.NewEncoder(w).Encode(msg)
@@ -223,17 +238,17 @@ func (h *handler) DeleteUser(w http.ResponseWriter, r *http.Request) {
 
 // Get many user
 //
-//	@Summary        Get many users
-//	@Description    Get many users
-//	@Tags           user
-//	@Security       ApiKeyAuth
-//	@Accept         json
-//	@Produce        json
-//	@Success        200 {object}    response.ManyUsersResponse
-//	@Failure        400 {object}    httperr.RestErr
-//	@Failure        404 {object}    httperr.RestErr
-//	@Failure        500 {object}    httperr.RestErr
-//	@Router         /user [get]
+//	@Summary		Get many users
+//	@Description	Get many users
+//	@Tags			user
+//	@Security		ApiKeyAuth
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	response.ManyUsersResponse
+//	@Failure		400	{object}	httperr.RestErr
+//	@Failure		404	{object}	httperr.RestErr
+//	@Failure		500	{object}	httperr.RestErr
+//	@Router			/user/list-all [get]
 func (h *handler) FindManyUsers(w http.ResponseWriter, r *http.Request) {
 	res, err := h.service.FindManyUsers(r.Context())
 	if err != nil {
@@ -250,18 +265,18 @@ func (h *handler) FindManyUsers(w http.ResponseWriter, r *http.Request) {
 
 // Update user password
 //
-//	@Summary        Update user password
-//	@Description    Endpoint for Update user password
-//	@Tags           user
-//	@Security       ApiKeyAuth
-//	@Accept         json
-//	@Produce        json
-//	@Param          id      path    string                      true    "user id"
-//	@Param          body    body    dto.UpdateUserPasswordDto   true    "Update user password dto"  true
-//	@Success        200
-//	@Failure        400 {object}    httperr.RestErr
-//	@Failure        500 {object}    httperr.RestErr
-//	@Router         /user/password/{id} [get]
+//	@Summary		Update user password
+//	@Description	Endpoint for Update user password
+//	@Tags			user
+//	@Security		ApiKeyAuth
+//	@Accept			json
+//	@Produce		json
+//	@Param			id		path	string						true	"user id"
+//	@Param			body	body	dto.UpdateUserPasswordDto	true	"Update user password dto"	true
+//	@Success		200
+//	@Failure		400	{object}	httperr.RestErr
+//	@Failure		500	{object}	httperr.RestErr
+//	@Router			/user/{id}/password [patch]
 func (h *handler) UpdateUserPassword(w http.ResponseWriter, r *http.Request) {
 	var req dto.UpdateUserPasswordDto
 
@@ -306,9 +321,16 @@ func (h *handler) UpdateUserPassword(w http.ResponseWriter, r *http.Request) {
 	err = h.service.UpdateUserPassword(r.Context(), &req, id)
 	if err != nil {
 		slog.Error(fmt.Sprintf("error to update user password: %v", err), slog.String("package", "handler_user"))
+		if err.Error() == "user not found" {
+			w.WriteHeader(http.StatusNotFound)
+			msg := httperr.NewNotFoundError("user not found")
+			json.NewEncoder(w).Encode(msg)
+			return
+		}
 		w.WriteHeader(http.StatusInternalServerError)
 		msg := httperr.NewBadRequestError("error to update user password")
 		json.NewEncoder(w).Encode(msg)
 		return
 	}
+
 }
